@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.37) unstable; urgency=low
 
   * migrate: revert changes with PostgreSQL 9.6 syntax
+  * workshop: make database migration mandatory
 
  --   
 
